<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Add your UI elements (EditText, Button, TextView) here -->

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="Enter a number"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate Square"
        android:layout_below="@id/editTextNumber"
        android:onClick="calculateSquare"/>

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonCalculate"
        android:layout_marginTop="202dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonCube"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNumber"
        android:layout_marginTop="64dp"
        android:onClick="calculateCube"
        android:text="calculate cube" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNumber"
        android:layout_marginTop="131dp"
        android:onClick="reset"
        android:text="RESET" />

</RelativeLayout>
